dump.txt
Relation.cpp:35:53: error: no 'bool Relation::assertRefersToInstance(std::string) const' member function declared in class 'Relation'
 bool Relation::assertRefersToInstance(string title) const {
                                                     ^
Relation.cpp:45:50: error: no 'bool Relation::assertRefersToCNoun(std::string) const' member function declared in class 'Relation'
 bool Relation::assertRefersToCNoun(string title) const{
                                                  ^
Instance.cpp: In member function 'void Instance::addRelation(const Relation&)':
Instance.cpp:18:40: error: 'assertRefersToInstance' was not declared in this scope
  if(assertRefersToInstance(this->mTitle)==false){
                                        ^
